fix the text too big in footer

--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
     margin: 0;
 
     font-family: Helvetica, sans-serif;
-/*     border: dotted; */
+    /*     border: dotted; */
 }
 
 body {
@@ -212,7 +212,8 @@ button:disabled {
 
 #bar-bottom>span,
 #bar-bottom>span>a {
-    color: rgba(0, 0, 0, 0.5);
+    font-size: 12px;
+    color: rgba(0, 0, 0, 0.3);
     text-decoration: none;
     text-align: center;
 }
